<resources>
    <string name="app_name">ebcom</string>
    <string name="default_icon_desc">defaultIconDesc</string>
    <string name="share_icon">shareIcon</string>
    <string name="save_icon">saveIcon</string>
    <string name="arrow_icon">arrowIcon</string>
    <string name="label_image">labelImage</string>
    <string name="large_image_icon">largeImageIcon</string>
    <string name="back_btn">backBtn</string>
    <string name="myMessage">پیام های من</string>
    <string name="valid_message">اعتبار پیام</string>
    <string name="empty_state">empty_state</string>
    <string name="message_empty_state">هیچ پیامی جهت نمایش موجود نیست</string>
    <string name="error_message_connection">مشکلی در ارتباط به سرور بوجود آمد</string>
    <string name="check_icon">check_icon</string>
    <string name="deleteTxt">حذف</string>
    <string name="cancelTxt">انصراف</string>
</resources>